feat(cloud-run): add URL output to deploy tag revision

--- a/deploy-cloud-run-with-tag/action.yml
+++ b/deploy-cloud-run-with-tag/action.yml
@@ -22,6 +22,10 @@ inputs:
   workload_identity_provider:
     description: "The workload identity provider to use for authentication"
     required: true
+outputs:
+  url:
+    description: "The URL of the deployed Cloud Run service"
+    value: ${{ steps.deploy-pr.outputs.url }}
 runs:
   using: composite
   steps:
