--- a/deploy-cloud-run/action.yml
+++ b/deploy-cloud-run/action.yml
@@ -34,13 +34,13 @@ inputs:
 runs:
   using: composite
   steps:
-    - uses: actions/checkout@v4
-    - uses: google-github-actions/auth@v2
+    - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+    - uses: google-github-actions/auth@6fc4af4b145ae7821d527454aa9bd537d1f2dc5f # v2.1.7
       with:
         service_account: ${{ inputs.service_account }}
         workload_identity_provider: ${{ inputs.workload_identity_provider }}
     - name: Set up Cloud SDK
-      uses: google-github-actions/setup-gcloud@v2
+      uses: google-github-actions/setup-gcloud@6189d56e4096ee891640bb02ac264be376592d6a # v2.1.2
     - name: Setup status codes for catching errors
       id: http_responses
       shell: bash
@@ -97,7 +97,7 @@ runs:
       if: ${{ inputs.blue_green_enabled == 'false' }}
       shell: bash
     - name: Deploy to Cloud Run
-      uses: google-github-actions/deploy-cloudrun@v2
+      uses: google-github-actions/deploy-cloudrun@1ec29da1351112c7904fb60454a55e3e1021a51c # v2.7.2
       if: ${{ inputs.blue_green_enabled == 'false' }}
       id: deploy
       with:
@@ -109,7 +109,7 @@ runs:
         skip_default_labels: true
     - name: Run HTTP health check
       continue-on-error: true
-      uses: fjogeleit/http-request-action@v1
+      uses: fjogeleit/http-request-action@4ba5e8c5d4b8b8815bb9c6c2b8f7d7b5e8c4e8b5 # v1.15.5
       if: ${{ inputs.blue_green_enabled == 'false' && inputs.test_url != '' }}
       id: test_live
       with:
@@ -122,7 +122,7 @@ runs:
       if: ${{ inputs.blue_green_enabled == 'true' }}
       shell: bash
     - name: Deploy to Cloud Run Blue
-      uses: google-github-actions/deploy-cloudrun@v2
+      uses: google-github-actions/deploy-cloudrun@1ec29da1351112c7904fb60454a55e3e1021a51c # v2.7.2
       id: deploy_blue
       if: ${{ inputs.blue_green_enabled == 'true' }}
       with:
@@ -134,7 +134,7 @@ runs:
         no_traffic: true
         skip_default_labels: true
     - name: Run HTTP health check on blue
-      uses: fjogeleit/http-request-action@v1
+      uses: fjogeleit/http-request-action@4ba5e8c5d4b8b8815bb9c6c2b8f7d7b5e8c4e8b5 # v1.15.5
       if: ${{ inputs.blue_green_enabled == 'true' && inputs.test_url != ''}}
       id: test_blue
       with:
@@ -152,7 +152,7 @@ runs:
       if: ${{ inputs.blue_green_enabled == 'true' && steps.test_blue.outputs.status >= 200 && steps.test_blue.outputs.status < 300 }}
       shell: bash
     - name: Deploy to Cloud Run Green
-      uses: google-github-actions/deploy-cloudrun@v2
+      uses: google-github-actions/deploy-cloudrun@1ec29da1351112c7904fb60454a55e3e1021a51c # v2.7.2
       id: deploy_green
       if: ${{ inputs.blue_green_enabled == 'true' && steps.test_blue.outputs.status >= 200 && steps.test_blue.outputs.status < 300 }}
       with:
@@ -165,7 +165,7 @@ runs:
         update_traffic_flags: '--remove-tags blue-release'
     - name: Run HTTP health check on green
       continue-on-error: true
-      uses: fjogeleit/http-request-action@v1
+      uses: fjogeleit/http-request-action@4ba5e8c5d4b8b8815bb9c6c2b8f7d7b5e8c4e8b5 # v1.15.5
       if: ${{ inputs.blue_green_enabled == 'true' && inputs.test_url != '' && steps.test_blue.outputs.status >= 200 && steps.test_blue.outputs.status < 300 }}
       id: test_green
       with:
@@ -184,7 +184,7 @@ runs:
         echo "Rolling back to: ${{ steps.get_revision.outputs.revision }}"
       shell: bash
     - name: Rollback to previous version if health check fails
-      uses: google-github-actions/deploy-cloudrun@v2
+      uses: google-github-actions/deploy-cloudrun@1ec29da1351112c7904fb60454a55e3e1021a51c # v2.7.2
       id: rollback
       if: ${{ inputs.automatic_rollback_enabled == 'true' && inputs.test_url != '' && (steps.test_green.outputs.status >= 300 || steps.test_live.outputs.status >= 300) }}
       with:
