--- a/prepare-build/action.yml
+++ b/prepare-build/action.yml
@@ -40,7 +40,7 @@ runs:
   steps:
     - name: checkout
       if: ${{ inputs.checkout == 'true' }}
-      uses: actions/checkout@v4
+      uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
     - name: Fetch tags
       shell: bash
       run: git fetch --prune --unshallow --tags
