--- a/stage/action.yml
+++ b/stage/action.yml
@@ -21,12 +21,12 @@ runs:
         git config --global user.name ${{ inputs.gh_app_id  }}
         git config --global user.email ${{ inputs.gh_app_id }}+${{ inputs.gh_app_user }}[bot]@users.noreply.github.com
         git config --global pull.rebase false
-    - uses: actions/create-github-app-token@v1
+    - uses: actions/create-github-app-token@5d869da34e18e7287c1daad50e0b8ea0f506ce69 # v1.11.0
       id: app-token
       with:
         app-id: ${{ inputs.gh_app_id }}
         private-key: ${{ inputs.gh_app_private_key }}
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
       with:
         fetch-depth: 0
         token: ${{ steps.app-token.outputs.token }}
