--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -1,10 +1,6 @@
 on:
   workflow_call:
     inputs:
-      image:
-        type: string
-        description: The image to deploy without tags
-        required: true
       context:
         type: string
       use_dockerhub:
@@ -26,6 +22,7 @@ on:
         description: The full name of the deployed docker image
         value: ${{ inputs.image }}@${{ jobs.docker.outputs.digest }}
     secrets:
+      image:
       DOCKERHUB_USERNAME:
       DOCKERHUB_TOKEN:
 
@@ -40,7 +37,7 @@ jobs:
       digest: ${{ steps.build.outputs.digest }}
     if: inputs.name || inputs.new_tag
     env:
-      IMAGE_NAME: ${{ inputs.image }}
+      IMAGE_NAME: ${{ secrets.image }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -61,7 +58,7 @@ jobs:
       - name: Get options
         id: options
         env:
-          IMAGE_NAME: ${{ inputs.image }}
+          IMAGE_NAME: ${{ secrets.image }}
           TAG: ${{ inputs.new_tag_short }}
           NAME: ${{ inputs.name }}
           SHA: ${{ inputs.sha_short }}
