--- a/build-docker-image/action.yml
+++ b/build-docker-image/action.yml
@@ -52,7 +52,7 @@ runs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ github.token }}
       - name: Login to DockerHub
         uses: docker/login-action@74a5d142397b4f367a81961eba4e8cd7edddf772 # v3.4.0
         if: inputs.use_dockerhub == 'true'
